--- a/package.json
+++ b/package.json
@@ -26,9 +26,14 @@
     "grunt-concurrent": "~0.1.0",
     "matchdep": "~0.1.1",
     "grunt-contrib-watch": "~0.3.1",
-    "grunt-exec": "~0.4.0"
+    "grunt-exec": "~0.4.0",
+    "grunt-express": "~0.3.3"
   },
   "engines": {
     "node": ">=0.8.0"
+  },
+  "dependencies": {
+    "socket.io": "~0.9.14",
+    "express": "~3.2.1"
   }
 }
