--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "matchdep": "~0.1.1",
     "grunt-contrib-watch": "~0.3.1",
     "grunt-exec": "~0.4.0",
-    "grunt-express": "~0.3.3"
+    "grunt-express": "~0.3.3",
+    "node-spritesheet": "~0.4.1"
   },
   "engines": {
     "node": ">=0.8.0"
