--- a/package.json
+++ b/package.json
@@ -1,44 +1,32 @@
 {
-  "name": "crm",
-  "version": "0.0.1",
+  "name": "mailadm",
+  "version": "0.0.2",
+  "browser": {},
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-concat": "~0.1.3",
-    "grunt-contrib-coffee": "~0.6.5",
-    "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-compass": "~0.1.3",
-    "grunt-contrib-jshint": "~0.4.1",
-    "grunt-contrib-cssmin": "~0.6.0",
-    "grunt-contrib-connect": "~0.2.0",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-htmlmin": "~0.1.3",
-    "grunt-contrib-imagemin": "~0.1.3",
-    "grunt-contrib-livereload": "~0.1.2",
-    "grunt-bower-requirejs": "~0.4.1",
-    "grunt-rev": "~0.1.0",
-    "grunt-usemin": "~0.1.10",
-    "grunt-regarde": "~0.1.1",
-    "grunt-requirejs": "~0.3.5",
-    "grunt-mocha": "~0.3.0",
-    "grunt-open": "~0.2.0",
-    "grunt-svgmin": "~0.1.0",
-    "grunt-concurrent": "~0.1.0",
-    "matchdep": "~0.1.1",
-    "grunt-contrib-watch": "~0.3.1",
-    "grunt-exec": "~0.4.0",
-    "grunt-express": "~0.3.3",
-    "node-spritesheet": "~0.4.1"
+    "gulp": "~3.6.2",
+    "gulp-browserify": "^0.5.0",
+    "gulp-if": "^1.0.0",
+    "gulp-less": "^1.2.3",
+    "gulp-livereload": "^1.3.1",
+    "gulp-notify": "^1.2.5",
+    "gulp-notify-growl": "^1.0.1",
+    "gulp-rename": "^1.2.0",
+    "gulp-uglify": "^0.2.1",
+    "node-spritesheet": "~0.4.1",
+    "optimist": "^0.6.1",
+    "tiny-lr": "0.0.5"
   },
   "engines": {
     "node": ">=0.8.0"
   },
   "dependencies": {
-    "socket.io": "~0.9.14",
-    "express": "~3.2.1",
-    "underscore": "~1.5.1",
-    "pg": "~2.1.0",
+    "bookshelf": "^0.6.10",
+    "express": "~3.4.0",
+    "passport": "~0.1.17",
     "passport-local": "~0.1.6",
-    "passport": "~0.1.17"
+    "pg": "~2.1.0",
+    "socket.io": "~0.9.14",
+    "underscore": "~1.5.1",
+    "colors": "~0.6.2"
   }
 }
