--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.2",
   "browser": {},
   "devDependencies": {
-    "gulp": "~3.6.2",
+    "gulp": "^3.8.1",
     "gulp-browserify": "^0.5.0",
     "gulp-if": "^1.0.0",
     "gulp-less": "^1.2.3",
@@ -12,6 +12,7 @@
     "gulp-notify-growl": "^1.0.1",
     "gulp-rename": "^1.2.0",
     "gulp-uglify": "^0.2.1",
+    "less": "^1.7.2",
     "node-spritesheet": "~0.4.1",
     "optimist": "^0.6.1",
     "tiny-lr": "0.0.5"
