--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,11 @@
     "tests"
   ],
   "dependencies": {
-    "font-awesome": "~4.1.0"
+    "font-awesome": "~4.1.0",
+    "angular": "1.2.18",
+    "angular-resource": "1.2.18",
+    "angular-route": "1.2.18",
+    "angular-cookies": "1.2.18",
+    "angular-animate": "1.2.18"
   }
 }
