--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "devDependencies": {
     "gulp": "^3.8.11",
     "gulp-less": "^3.0.1",
-    "jasmine": "^2.2.1"
+    "jasmine": "^2.2.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
