--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "express": "^4.12.2",
     "font-awesome": "^4.3.0",
     "jquery": "^1.9.1",
-    "tiny-di": "0.0.6"
+    "tiny-di": "^0.1.0"
   },
   "devDependencies": {
     "gulp": "^3.8.11",
