--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.12.2",
     "font-awesome": "^4.3.0",
     "jquery": "^1.9.1",
+    "sequelize": "^3.1.1",
     "tiny-di": "^0.1.0"
   },
   "devDependencies": {
