--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "angular": "^1.4.0",
+    "angular-new-router": "^0.5.3",
     "bootstrap": "^3.3.2",
     "browserify": "^9.0.3",
     "express": "^4.12.2",
