--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express": "^4.12.2",
     "font-awesome": "^4.3.0",
     "jquery": "^1.9.1",
+    "pg": "^4.3.0",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^3.1.1",
     "tiny-di": "^0.1.0"
   },
